[project]
name = "workout-tracker-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "dishka>=1.8.0",
    "fastapi[all]>=0.135.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "ruff>=0.15.4"]

[tool.ruff]
target-version = "py314"
line-length = 79

select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "PT", "ANN", "ARG"]
ignore = ["D203", "D213", "F401", "F841"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
